--- a/main.html
+++ b/main.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>𝐁𝐌𝐖-𝐗𝐃</title>
+  <title>𝐂𝐀𝐒𝐄𝐘𝐑𝐇𝐎𝐃𝐄𝐒-𝐌𝐃</title>
   <meta name="theme-color" content="#f0a500">
-  <meta name="description" content="Pairing session for BMW-XD.">
-  <meta name="author" content="kingmalvn">
+  <meta name="description" content="Pairing session for CASEYRHODES MD.">
+  <meta name="author" content="CASEYRHODES">
   <meta name="robots" content="all">
   <meta name="robots schedule" content="auto">
   <meta name="distribution" content="global">
   <meta name="googlebot" content="index,follow">
-  <meta property="og:title" content="BMW-XD"/>
-  <meta name="description" content=" [+] Pairing session for BMW-XD [+] ">
+  <meta property="og:title" content="CASEYRHODES TECH"/>
+  <meta name="description" content=" [+] Pairing session for CASEYRHODES MD[+] ">
   <meta property="og:image" content="/bg.jpg">
   <link href="/style.css" rel="stylesheet">
   <link rel="shortcut icon" href="/icone.jpg">
@@ -30,7 +30,7 @@
       justify-content: flex-start;
       height: 100vh;
       margin: 0;
-      background-image: url("https://files.catbox.moe/fq30m0.jpg");
+      background-image: url("https://i.ibb.co/6cr0TB7N/lordcasey.jpg");
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
@@ -171,8 +171,8 @@
   <!-- Playlist Section -->
   <div class="playlist">
     <h3>Audio Playlist</h3>
-    <a href="https://files.catbox.moe/utbujd.mp3" target="_blank">Track 1: utbujd.mp3</a>
-    <a href="https://files.catbox.moe/w2j17k.m4a" target="_blank">Track 2: w2j17k.m4a</a>
+    <a href="https://files.catbox.moe/w2j17k.m4a" target="_blank">Track 1: utbujd.mp3</a>
+    <a href="https://files.catbox.moe/utbujd.mp3" target="_blank">Track 2: w2j17k.m4a</a>
     <a href="https://files.catbox.moe/851skv.m4a" target="_blank">Track 3: 851skv.m4a</a>
     <a href="https://files.catbox.moe/qnhtbu.m4a" target="_blank">Track 4: qnhtbu.m4a</a>
     <a href="https://files.catbox.moe/lb0x7w.mp3" target="_blank">Track 5: lb0x7w.mp3</a>
@@ -182,11 +182,11 @@
   <!-- Buttons -->
   <a href="/pair" class="btn">PAIR CODE</a>
   <a href="/qr" class="btn">QR CODE</a>
-  <a href="https://github.com/kingmalvn/" class="btn">Follow me on github</a>
+  <a href="https://github.com/caseyweb/" class="btn">Follow me on github</a>
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 | Malvin King
+    &copy; 2025 | CASEYRHODES TECH
   </footer>
 
   <script>
@@ -196,7 +196,7 @@
     }
 
     function redirigerVersWhatsApp() {
-      window.location.href = "https://wa.me/+263714757857";
+      window.location.href = "https://wa.me/+254112192119";
     }
   </script>
 </body>
