--- a/pair.html
+++ b/pair.html
@@ -12,7 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: url("https://files.catbox.moe/fq30m0.jpg"); /* set the background image */
+      background: url("https://i.ibb.co/BVQgsQDh/lordcasey.jpg"); /* set the background image */
       font-family: Arial, sans-serif;
     }
 
@@ -143,12 +143,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">𝐁𝐌𝐖 𝐏𝐀𝐈𝐑 𝐂𝐎𝐃𝐄</h3>
+            <h3 class="centered-text">𝐂𝐀𝐒𝐄𝐘𝐑𝐇𝐎𝐃𝐄𝐒 𝐌𝐃 𝐏𝐀𝐈𝐑 𝐂𝐎𝐃𝐄</h3>
             <br>
-            <h6>𝐑𝐞𝐠𝐚𝐫𝐝𝐬 𝐌𝐚𝐥𝐯𝐢𝐧 𝐊𝐢𝐧𝐠🎗</h6>
+            <h6>𝐑𝐞𝐠𝐚𝐫𝐝𝐬 𝐂𝐀𝐒𝐄𝐘𝐑𝐇𝐎𝐃𝐄𝐒🎗</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="263714757xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="254714757xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
